<resources>
    <string name="app_name">WordScramble</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">WordScramble</string>
    <string name="buttonLabel">PLAY</string>
    <string name="buttonLab">NEXT</string>
    <string name="textlab"></string>
    <string name="textlabb">answer</string>
    <string name="editlab"></string>
    <string name="hints">Enter answer</string>
    <string name="butt2">START</string>
    <string name="title_activity_main_activity22">WordScramble</string>
    <string name="textv">text11</string>
</resources>
