<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.madhusmita.wordscramble.MainActivity2Activity"
    android:id="@+id/abc"
    android:background="#fffff5b4">

    <TextView
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="@android:dimen/app_icon_size"
        android:text="@string/textlab"
        android:id="@+id/txt1"
        android:background="#fffff5b4"
        android:layout_above="@+id/ans"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:textAlignment="center"
        android:textColor="#ffe13e07"
        android:textSize="@android:dimen/dialog_min_width_major"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLab"
        android:id="@+id/button2"
        android:onClick="game"
        android:clickable="true"
        android:layout_below="@+id/edi"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:background="#ffffa66f" />

    <TextView
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/app_icon_size"
        android:text="@string/textlabb"
        android:id="@+id/ans"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:background="#fffff5b4"
        android:textAlignment="center" />

    <EditText
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:id="@+id/edi"
        android:text="@string/editlab"
        android:inputType="text"
        android:hint="@string/hints"
        android:focusable="true"
        android:editable="false"
        android:layout_below="@+id/ans"
        android:layout_centerHorizontal="true"
        android:textColor="#fff00416" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:text="@string/butt2"
        android:clickable="true"
        android:onClick="startg"
        android:background="#ffffb78a"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
